--- a/css/admin.css
+++ b/css/admin.css
@@ -1,16 +1,11 @@
-.link-button {
-	color: inherit;
-	text-decoration: none;
-}
-#admin-button-grid button {
-	padding: 0.2em 1.0em;
-}
-
 .menu-wrapper {
 	margin: 0px auto;
+	margin-top: 1.5em;
 	width: 510px;
 }
-
-button.big {
+.menu-wrapper button {
+	padding: 0.33em 1em;
+	margin: 0.15em;
+	width: 100%;
 	font-size: 2.5em;
 }
