--- a/css/global.css
+++ b/css/global.css
@@ -27,6 +27,10 @@ header {
 	z-index: 10;
 	color: #fff;
 }
+header button {
+	background-color: rgba(0, 0, 0, 0.33);
+	color: white;
+}
 
 header h1 {
 	float: left;
@@ -56,6 +60,10 @@ header h1 {
 
 #navbar {
 	float: left;
+}
+header #navbar {
+	margin: 10px;
+	padding: 0.67em;
 }
 #navbar .icon {
 	display: inline-block;
